--- a/style.css
+++ b/style.css
@@ -1,8 +1,26 @@
+*{
+    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
 body{
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: "Gorditas", serif;
+    background-image: url("img/5_background/background_img.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+h1{
+    margin-top: 30px;
+    margin-bottom: 23px;
 }
 
 canvas{
