--- a/style.css
+++ b/style.css
@@ -5,24 +5,56 @@
     position: relative;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: "Gorditas", serif;
 }
 
 body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: "Gorditas", serif;
     background-image: url("img/5_background/background_img.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
+    min-height: 100vh;
 }
 
 h1{
-    margin-top: 30px;
-    margin-bottom: 23px;
+    top: 50px;
 }
 
 canvas{
+    position: absolute;
     background-color: black;
+    top: 148px;
+}
+
+#startOverlay{
+    position: absolute;
+    width: 720px;
+    height: 480px;
+    background-image: url("img/9_intro_outro_screens/start/startscreen_1.png");
+    background-position: center;
+    background-size: 100% 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    top: 148px;
+}
+
+#startButton{
+    bottom: 170px;
+    font-size: 1.5rem;
+    padding: 5px;
+    color: white;
+    background-color: orange;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+
+    &&:hover{
+        background-color: rgb(255, 181, 44);
+        color: black;
+    }
 }
