--- a/style.css
+++ b/style.css
@@ -12,27 +12,69 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-image: url("img/5_background/background_img.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    min-height: 100vh;
+    background-size: cover;
+    height: 100vh;
 }
 
 h1{
-    top: 50px;
     font-size: 3rem;
+    margin-bottom: 40px;
+
+    @media (max-height: 720px){
+        display: none;
+    }
+
+    @media (max-height: 480px){
+        display: none;
+    }
+}
+
+#contentarea{
+    width: 100%;
+    max-width: 1920px;
+    height: 100dvh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#canvasarea{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+    @media (max-width: 932px){
+        width: 100%;
+    }
+
+    @media (max-height: 480px){
+        height: 100vh;
+    }
 }
 
 canvas{
-    position: absolute;
+    display: block;
     background-color: black;
-    top: 190px;
+
+    @media (max-width: 932px){
+        width: 100%;
+    }
+
+    @media (max-height: 480px){
+        height: 100vh;
+    }
 }
 
 #muteButton{
-    top: 150px;
-    left: 320px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
     z-index: 101;
     padding: 5px;
     color: white;
@@ -50,14 +92,22 @@ canvas{
     background-position: center;
     background-size: 100% 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
     z-index: 100;
-    top: 190px;
+
+    @media (max-width: 932px){
+        width: 100%;
+    }
+
+    @media (max-height: 480px){
+        height: 100vh;
+    }
 
     #controllsButton{
-        bottom: 170px;
+        position: absolute;
+        top: 50px;
+        left: 50%;
+        transform: translateX(-50%);
         font-size: 1.5rem;
         padding: 5px;
         color: white;
@@ -73,10 +123,13 @@ canvas{
     }
 
     #impressum{
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
         color: white;
         text-decoration: underline;
         font-size: 0.8rem;
-        top: 190px;
 
         &&:hover{
             color: orange;
@@ -96,8 +149,16 @@ canvas{
     flex-direction: column;
     display: flex;
     align-items: center;
+    justify-content: center;
     z-index: 99;
-    top: 190px;
+
+    @media (max-width: 932px){
+        width: 100%;
+    }
+
+    @media (max-height: 480px){
+        height: 100vh;
+    }
 
     #startButton{
         font-size: 1.5rem;
@@ -106,6 +167,14 @@ canvas{
         border: none;
         border-radius: 10px;
         cursor: pointer;
+
+        @media (max-width: 932px){
+            margin-bottom: 20px;
+        }
+
+        @media (max-height: 480px){
+            margin-bottom: 20px;
+        }
 
         &&:hover{
             background-color: rgb(255, 181, 44);
@@ -116,13 +185,30 @@ canvas{
     h2{
         margin: 30px;
         font-size: 2rem;
+
+        @media (max-width: 932px){
+            display: none;
+        }
+
+        @media (max-height: 480px){
+            display: none;
+        }
     }
 
     #controllsTable{
         flex-direction: column;
         display: flex;
         align-items: center;
-        margin-bottom: 30px;
+
+        @media (max-width: 932px){
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+        @media (max-height: 480px){
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
 
         td{
             padding: 10px;
@@ -150,13 +236,20 @@ canvas{
     background-repeat: no-repeat;
     background-size: 100%;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
     z-index: 98;
-    top: 190px;
+
+    @media (max-width: 932px){
+        width: 100%;
+    }
+
+    @media (max-height: 480px){
+        height: 100vh;
+    }
 
     #restartGameButton{
-        top: 150px;
+        position: absolute;
+        bottom: 30px;
+        right: 100px;
         font-size: 1.5rem;
         padding: 5px;
         color: white;
@@ -172,7 +265,9 @@ canvas{
     }
 
     #backToMainScreenButton{
-        top: 150px;
+        position: absolute;
+        bottom: 30px;
+        left: 100px;
         font-size: 1.5rem;
         padding: 5px;
         color: white;
@@ -198,13 +293,20 @@ canvas{
     background-repeat: no-repeat;
     background-size: 100%;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
     z-index: 97;
-    top: 190px;
+
+    @media (max-width: 932px){
+        width: 100%;
+    }
+
+    @media (max-height: 480px){
+        height: 100vh;
+    }
 
     #restartGameButton{
-        top: 180px;
+        position: absolute;
+        bottom: 30px;
+        right: 100px;
         font-size: 1.5rem;
         padding: 5px;
         color: white;
@@ -220,7 +322,9 @@ canvas{
     }
 
     #backToMainScreenButton{
-        top: 180px;
+        position: absolute;
+        bottom: 30px;
+        left: 100px;
         font-size: 1.5rem;
         padding: 5px;
         color: white;
